--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                 <a href="">Sobre nosotros</a>               
             </nav>
             <section class="footer_contact">
-                <h3 class="footer_title">Contactanos : Facebook Pretty and fashionable  , Instagram pretty_and_fashonable <img> </h3>
+                <h3 class="footer_title">Contactanos : Facebook <A HREF="https://www.facebook.com/profile.php?id=100056815507456?hl=es-la">Pretty and fashionable </A>  , Instagram  <A HREF="https://www.instagram.com/pretty_and_fashonable/?hl=es-la"> pretty_and_fashonable </A>
+                  <img> </h3>
                 <div class="footer_icons">
                     <span class="footer_container-icons">
                         <a class="fab fa-facebook__footer__icons" href="#"></a>
@@ -120,12 +121,7 @@
                 </div>
             </section>
         </div>
-    </footer>
-    
-   
-    
-  
-
+    </footer>  
 <script src="https://kit.fontawesome.com/8bb7cb88bc.js" crossorigin="anonymous"></script>
 </body>
 </html>
