--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina web Nicol Vargas Ortiz de Zevallos</title>
+    <title>Pagina de una mentirosa llamada Nicole Geraldine vargas</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>  
     <header class="hero">
         <div class="container">
             <nav class="nav">
-                <a href="#"class ="nav__items nav__items==cta">Nosotros como empresa</a>
-                <a href="#" class="nav__items">nuestros servicios</a>
+                <a href="#"class ="nav__items nav__items==cta">Se embarazo de otro y a su ex le decia que ya no vivia con el papa de su bebe </a>
+                <a href="#" class="nav__items">nuestros servicios engañar de una manera epica</a>
                 <a href="#" class="nav__items">Nuetros proyectos</a>
             </nav>
             <section class="hero__container">
